2010-11-04 tatuya
* Fix stop_action on invoice_workflow. The settings were missing.

2010-10-27 yusei
* Fix invoice_workflow. Some user-action transitions were missing. Permission settings on started and stopped states were missing.

2010-06-15 yusei
* Fix plan transition on invoice_workflow. Appropriate root applied rule must be made.

2010-04-27 yusei
* Fix list view forms for sale/purchase invoice module.
* Fix purchase invoice default view action. View form for purchase invoice transaction was used.
* Remove detail action from purchase invoice portal type. It was not an action for purchase invoice.

2010-04-08 yusuke
* Reverted previous change.

2010-03-10 yusuke
* Set an init script into Sale Invoice portal type.

2010-03-02 yusei
* Remove short title.

2010-02-19 yusei
* Set business_application category to Sale Invoice Module and Purchase Invoice Module.

2010-02-03 yusuke
* Invoice workflow supports auto_plan transition.

2009-10-16 yusei
* Update for the changes of new portal types of portal types.

2009-06-22 tatuya
set quantity unit on invoice lines

2009-06-19 tatuya
 * initial creation so that it enables to create invoices independently