@@ -1,3 +1,6 @@
+2011-11-22 yusei
+* Stop showing detailed DateTime in listbox. This problem started occur due to recent specification change of zope's DateTime.
+
 2010-11-04 tatuya
 * Fix stop_action on invoice_workflow. The settings were missing.
 
